# Functional

./: .gitignore  ChangeLog.md  Functional.cabal  LICENSE  README.md  package.yaml
app/: Main.hs
src/: BinarySearch.hs  Boolean.hs  Lib.hs  Main.hs  Rome.hs  Sort.hs  Test.hs  baby.hs
test/: Spec.hs
