name:                Functional
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/0x11901/Functional#readme
license:             MIT License
license-file:        LICENSE
author:              0x11901
maintainer:          wjk930726@live.com
copyright:           Copyright (c) 2018 0x11901
category:            Learning Haskell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Functional
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
